no habia guardado

--- a/ejercicio.html
+++ b/ejercicio.html
@@ -47,7 +47,8 @@
          dentro de otra etiqueta y hereda todos los cambios
           que se realice al padre, en este caso el h4, en 
           caso no herede automatica mente se se añade 
-          inherit al heredero</p>
+          inherit al heredero
+    </p>
     <h4>Ejemplo de herencia <a href="">Soy una herencia</a></h4>
     <br>
     <hr>
