cambio de lugares

--- a/ejercicio.html
+++ b/ejercicio.html
@@ -30,7 +30,8 @@
 
     <!--selector -->
     <p>Los selectores es para agarrar un elemento de html 
-        y darle color en un archivo aparte como style.css</p>
+        y darle color en un archivo aparte como style.css
+    </p>
         <h2>Usando selector 1</h2>
         <section>
             <h2>Usando selector 2</h2>
@@ -55,7 +56,8 @@
     <!--especificidad -->
     <p>Sirve para poder ordenar por gerarquia las etiquetas
          de html por medio de los estilos mediante nombres 
-         o valor asignado como etiqueta, class, id, inline e importat</p>
+         o valor asignado como etiqueta, class, id, inline e importat
+    </p>
     <h5 style="color:violet" class="primero" id="segundo">Usando especificidad</h5>    
     
 </body>
